Change gitignore and recoflix models

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-.idea/
-venv/
-__pycache__/
-
 *.sqlite3
+.DS_Store
+.idea/
+db.sqlite3*
+prs
+venv
+recommender/migrations
+collector/migrations
+.prs
+cluster.png
+*/__pycache__/*
+**/__pycache__/*
+analytics/migrations/*
